# SenePy

./: EXAMPLE_OIS_hepatocytes.ipynb  EXAMPLE_OIS_hepatocytes.md  EXAMPLE_USAGE.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: EXAMPLE_USAGE-checkpoint.ipynb  test_v1-checkpoint.ipynb
PAPER_CODE/: 1.1_TMS_Signature_enrichment.ipynb  10_LETHAL_COVID.ipynb  12_bulk_RNA_signatures.ipynb  1_SEN_GENE_DYNAMICS_TMS.ipynb  2_LABEL_HUMAN_DATA.ipynb  3_HARMONIZE_HUMAN_DATA.ipynb  4_SEN_GENE_DYNAMICS_HUMAN.ipynb  5.1_TMS_GENE_SIG_ANALYSIS.ipynb  5.2_HUB_PHYLOGENY.ipynb  5.3_HUB_ORGANISMAL_AGING_COMPARISON_TMS.ipynb  5_NOVEL_GENES_TMS.ipynb  6.1_HUMAN_GENE_SIG_ANALYSIS.ipynb  6_NOVEL_GENES_HUMAN.ipynb  7.1_SPECIFIC_HUB_EXAMPLES_TMS.ipynb  7_MAP_TMS_SIGNATURES_TO_TMS.ipynb  8_MAP_HUMAN_SIGS_TO_HUMAN.ipynb  9_p16_reporter.ipynb  PROCESS_SENMAYO_0.1.ipynb  freeze.txt
PAPER_CODE/.ipynb_checkpoints/: 1.1_TMS_Signature_enrichment-checkpoint.ipynb  1.3_MAKE_BDATA_SCVI-checkpoint.ipynb  1_SEN_GENE_DYNAMICS_TMS-checkpoint.ipynb  4_SEN_GENE_DYNAMICS_HUMAN-checkpoint.ipynb  5.1_TMS_GENE_SIG_ANALYSIS-checkpoint.ipynb  5.3_HUB_ORGANISMAL_AGING_COMPARISON_TMS-checkpoint.ipynb  5_NOVEL_GENES_TMS-checkpoint.ipynb  6.1_HUMAN_GENE_SIG_ANALYSIS-checkpoint.ipynb  6_NOVEL_GENES_HUMAN-checkpoint.ipynb  7.1_SPECIFIC_HUB_EXAMPLES_TMS-checkpoint.ipynb  (+3 more)
senepy/: load_hubs.py  pyproject.toml  score_hub.py
senepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
toy_data/: TOY_DATA_Chan_et_al_2024.rds
universal_signatures/: Universal_human.txt  Universal_mouse.txt
(+60 files in other folders)
