[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senepy"
version = "0.0.0"
authors = [
  { name="Mark Sanborn", email="mark.email24@gmail.com" },
]
description = "tools to score single-cells based on senescence marker expression"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"pandas>=1.0", "numpy>=1.17.0"
]


[project.urls]
"Homepage" = "https://github.com/mousepixels/senepy"
"Bug Tracker" = "https://github.com/mousepixels/senepy"


[tool.setuptools.package-data]
senepy = ["data/*.pickle", "data/*.txt"]
